--- a/.github/workflows/vangers_windows_64_build.yml
+++ b/.github/workflows/vangers_windows_64_build.yml
@@ -79,8 +79,10 @@ jobs:
         msys2 -c 'cp /mingw64/bin/libwinpthread-1.dll vangers/bin/'
         cp clunk/build/libclunk.dll vangers/bin/
         cp build/src/vangers.exe vangers/bin/
+        cp build/src/vangers.exe vangers/bin/vangers_debug.exe
         msys2 -c 'strip vangers/bin/vangers.exe'
         cp build/server/vangers_server.exe vangers/bin/
+        cp build/server/vangers_server.exe vangers/bin/vangers_server_debug.exe
         msys2 -c 'strip vangers/bin/vangers_server.exe'
         cp build/surmap/surmap.exe vangers/bin/
     - uses: actions/upload-artifact@v1
