--- a/.github/workflows/vangers_windows_32_build.yml
+++ b/.github/workflows/vangers_windows_32_build.yml
@@ -61,6 +61,13 @@ jobs:
     - name: vangers -- make
       run: msys2 -c 'ninja'
       working-directory: build
+    - name: vangers -- pdb
+      run: |
+        msys2 -c 'wget https://github.com/rainers/cv2pdb/releases/download/v0.50/cv2pdb-0.50.zip'
+        msys2 -c 'unzip cv2pdb-0.50.zip'
+        cv2pdb vangers.exe
+      working-directory: build/src
+
     - name: vangers -- prepare release folder
       run: |
         msys2 -c 'mkdir -p vangers/bin'
@@ -79,6 +86,7 @@ jobs:
         msys2 -c 'cp /mingw32/bin/libwinpthread-1.dll vangers/bin/'
         cp clunk/build/libclunk.dll vangers/bin/
         cp build/src/vangers.exe vangers/bin/
+        cp build/src/vangers.pdb vangers/bin/
         cp build/src/vangers.exe vangers/bin/vangers_debug.exe
         msys2 -c 'strip vangers/bin/vangers.exe'
         cp build/server/vangers_server.exe vangers/bin/
