--- a/.github/workflows/vangers_windows_64_build.yml
+++ b/.github/workflows/vangers_windows_64_build.yml
@@ -29,7 +29,7 @@ jobs:
       run: msys2 -c 'mkdir clunk/build'
     - name: clunk -- build and install
       run: |
-        msys2 -c 'cmake -DCMAKE_BUILD_TYPE=Debug -DCMAKE_INSTALL_PREFIX=/mingw64 -G Ninja ..'
+        msys2 -c 'cmake -DCMAKE_INSTALL_PREFIX=/mingw64 -G Ninja ..'
         msys2 -c 'ninja'
         msys2 -c 'ninja install'
       working-directory: clunk/build
@@ -57,7 +57,7 @@ jobs:
     - name: vangers -- create build dir
       run: msys2 -c 'mkdir build'
     - name: vangers -- configure
-      run: msys2 -c 'cmake -G Ninja ..'
+      run: msys2 -c 'cmake -DCMAKE_BUILD_TYPE=Debug -G Ninja ..'
       working-directory: build
     - name: vangers -- make
       run: msys2 -c 'ninja'
