--- a/.github/workflows/vangers_windows_32_build.yml
+++ b/.github/workflows/vangers_windows_32_build.yml
@@ -68,6 +68,10 @@ jobs:
         msys2 -c 'unzip cv2pdb-0.50.zip'
         .\cv2pdb.exe vangers.exe
       working-directory: build/src
+    - name: surmap -- pdb
+      run: |
+        ..\src\cv2pdb.exe surmap.exe
+      working-directory: build/surmap
     - name: vangers -- prepare release folder
       run: |
         msys2 -c 'mkdir -p vangers/bin'
@@ -93,6 +97,7 @@ jobs:
         cp build/server/vangers_server.exe vangers/bin/vangers_server_debug.exe
         msys2 -c 'strip vangers/bin/vangers_server.exe'
         cp build/surmap/surmap.exe vangers/bin/
+        cp build/surmap/surmap.pdb vangers/bin/
     - uses: actions/upload-artifact@v1
       with:
         name: Vangers-Release-32
