--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,8 @@ FIND_PACKAGE(Clunk REQUIRED)
 
 FIND_PACKAGE(FFMPEG REQUIRED)
 FIND_PACKAGE(ZLIB REQUIRED)
+
+FIND_PACKAGE(RustVangers REQUIRED)
 set(WINDOWS_RES "../vangers.res")
 
 IF(BINARY_SCRIPT)
@@ -83,6 +85,8 @@ endif()
 
 # subdirs
 ADD_SUBDIRECTORY("src")
+ADD_SUBDIRECTORY("lib/glad")
+ADD_SUBDIRECTORY("lib/renderer")
 ADD_SUBDIRECTORY("lib/xgraph")
 ADD_SUBDIRECTORY("lib/xsound")
 ADD_SUBDIRECTORY("lib/xtool")
