--- a/lib/xtool/CMakeLists.txt
+++ b/lib/xtool/CMakeLists.txt
@@ -28,6 +28,6 @@ IF(DXSTREAM_DEBUG)
 	ADD_DEFINITIONS(-DXSTREAM_DEBUG)
 ENDIF(DXSTREAM_DEBUG)
 
-INCLUDE_DIRECTORIES(BEFORE .)
+INCLUDE_DIRECTORIES(BEFORE . "${PROJECT_SOURCE_DIR}/lib/renderer/src")
 
 ADD_LIBRARY(xtool STATIC ${xtool_SRCS})
