--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 include_directories(
+	"${PROJECT_SOURCE_DIR}/lib/renderer/src"
 	"${PROJECT_SOURCE_DIR}/lib/xtool"
 	"${PROJECT_SOURCE_DIR}/lib/xgraph"
 	"${PROJECT_SOURCE_DIR}/lib/xsound"
@@ -91,9 +92,9 @@ TARGET_LINK_LIBRARIES(vangers
 	${SDL2_NET_LIBRARY}
 	${FFMPEG_LIBRARIES}
 	${ZLIB_LIBRARIES}
-	${OPENGL_LIBRARIES}
 	${WIN_LIB}
 	${STEAM_LIBS}
+    renderer
 	xtool
 	xgraph
 	xsound
