--- a/surmap/CMakeLists.txt
+++ b/surmap/CMakeLists.txt
@@ -1,6 +1,7 @@
 INCLUDE_DIRECTORIES(AFTER
 	"${PROJECT_SOURCE_DIR}/lib/xtool"
 	"${PROJECT_SOURCE_DIR}/lib/xgraph"
+	"${PROJECT_SOURCE_DIR}/lib/renderer/src"
 	"${PROJECT_SOURCE_DIR}"
 )
 
