--- a/.github/workflows/vangers_linux_build.yml
+++ b/.github/workflows/vangers_linux_build.yml
@@ -2,21 +2,58 @@ name: Vangers Linux Build
 
 on: [push, pull_request]
 
+env: 
+  VANGE_RS_REF: 950a5dd30e374c5e8cd28d7742eec814301c4ed2
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+
+    - name: vange-rs -- cache build
+      uses: actions/cache@v2
+      id: vange-rs-cache-build
+      with:
+        path: vange-rs/target/release/libvangers_ffi.a
+        key: ${{ env.VANGE_RS_REF }}
+
+    - name: install rustup toolchain
+      if: steps.vange-rs-cache-build.outputs.cache-hit != 'true'
+      uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+
+    - name: vange-rs -- download
+      if: steps.vange-rs-cache-build.outputs.cache-hit != 'true'
+      uses: actions/checkout@v2
+      with:
+        repository: kvark/vange-rs
+        ref: ${{ env.VANGE_RS_REF }}
+        path: vange-rs
+
+    - name: vange-rs -- build
+      if: steps.vange-rs-cache-build.outputs.cache-hit != 'true'
+      run: cargo build --release
+      working-directory: vange-rs/lib/ffi
+      
+    - name: vange-rs -- copy artifacts to prefix
+      run: sudo cp target/release/libvangers_ffi.a /usr/lib/
+      working-directory: vange-rs/
+      
     - name: update repos
       run: sudo apt-get update
     - name: install libs
-      run: sudo apt-get install cmake libsdl2-dev libsdl2-net-dev libogg-dev libvorbis-dev libavcodec-dev libavformat-dev libavutil-dev
+      run: sudo apt-get install -yq cmake libsdl2-dev libsdl2-net-dev libogg-dev libvorbis-dev libavcodec-dev libavformat-dev libavutil-dev
+
     - name: clunk download lib
       run: git clone --depth 1 https://github.com/stalkerg/clunk.git clunk
       working-directory: /tmp
+
     - name: clunk build and install
       run: cmake -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_C_COMPILER=/usr/bin/gcc-9 -DCMAKE_CXX_COMPILER=/usr/bin/g++-9 . && make && sudo make install
       working-directory: /tmp/clunk
+
     - name: configure
       run: mkdir build && cd build && cmake -DCMAKE_C_COMPILER=/usr/bin/gcc-9 -DCMAKE_CXX_COMPILER=/usr/bin/g++-9 ..
     - name: make
