Updated vange-rs ffi dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ FIND_PACKAGE(Clunk REQUIRED)
 FIND_PACKAGE(FFMPEG REQUIRED)
 FIND_PACKAGE(ZLIB REQUIRED)
 
-FIND_PACKAGE(RustVangers REQUIRED)
+FIND_PACKAGE(RustyVangers REQUIRED)
 set(WINDOWS_RES "../vangers.res")
 
 IF(BINARY_SCRIPT)
