Enabled env_logger feature

--- a/.github/workflows/vangers_macos_build.yml
+++ b/.github/workflows/vangers_macos_build.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 env: 
   VANGE_RS_REF: 4ba328799397016d19c7976679c33f8ee05ff074
-  
+
 jobs:
   build:
     runs-on: macos-10.15
@@ -46,7 +46,7 @@ jobs:
         path: vange-rs
 
     - name: vange-rs -- build
-      run: cargo build --release
+      run: cargo build --release --features env_logger
       working-directory: vange-rs/lib/ffi
       
     - name: vange-rs -- copy artifacts to prefix
