--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,11 +29,14 @@ FIND_PACKAGE(SDL2_net REQUIRED)
 FIND_PACKAGE(Ogg REQUIRED)
 FIND_PACKAGE(Vorbis REQUIRED)
 FIND_PACKAGE(VorbisFile REQUIRED)
-
-FIND_PACKAGE(Clunk REQUIRED)
-
 FIND_PACKAGE(FFMPEG REQUIRED)
 FIND_PACKAGE(ZLIB REQUIRED)
+
+# clunk
+ADD_SUBDIRECTORY("${CMAKE_CURRENT_LIST_DIR}/3rdparty/clunk/")
+set(CLUNK_INCLUDE_DIR "${CMAKE_CURRENT_LIST_DIR}/3rdparty/")
+set(CLUNK_LIBRARY clunk)
+
 set(WINDOWS_RES "../vangers.res")
 
 IF(BINARY_SCRIPT)
