Show commit information in error message

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,6 +87,20 @@ IF(WIN32)
 	)
 ENDIF(WIN32)
 
+# Get the current working branch
+execute_process(
+    COMMAND git rev-parse --abbrev-ref HEAD
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+    OUTPUT_VARIABLE GIT_BRANCH
+    OUTPUT_STRIP_TRAILING_WHITESPACE)
+
+# Get the latest commit hash
+execute_process(
+    COMMAND git rev-parse HEAD
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+    OUTPUT_VARIABLE GIT_COMMIT_HASH
+    OUTPUT_STRIP_TRAILING_WHITESPACE)
+
 # subdirs
 ADD_SUBDIRECTORY("src")
 ADD_SUBDIRECTORY("lib/xgraph")
