--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,6 +92,9 @@ execute_process(
     COMMAND git rev-parse --abbrev-ref HEAD
     WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
     OUTPUT_VARIABLE GIT_BRANCH
+	COMMAND_ECHO STDOUT
+	ECHO_OUTPUT_VARIABLE
+	ECHO_ERROR_VARIABLE
     OUTPUT_STRIP_TRAILING_WHITESPACE)
 
 # Get the latest commit hash
@@ -99,6 +102,9 @@ execute_process(
     COMMAND git rev-parse HEAD
     WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
     OUTPUT_VARIABLE GIT_COMMIT_HASH
+	COMMAND_ECHO STDOUT
+	ECHO_OUTPUT_VARIABLE
+	ECHO_ERROR_VARIABLE
     OUTPUT_STRIP_TRAILING_WHITESPACE)
 
 # subdirs
