--- a/lib/xtool/CMakeLists.txt
+++ b/lib/xtool/CMakeLists.txt
@@ -31,6 +31,6 @@ INCLUDE_DIRECTORIES(BEFORE .)
 
 ADD_LIBRARY(xtool STATIC ${xtool_SRCS})
 
-TARGET_COMPILE_DEFINITIONS (xtool PUBLIC "-DGIT_COMMIT_HASH=\"${GIT_COMMIT_HASH}\"" "-DGIT_BRANCH=\"${GIT_BRANCH}\"")
+TARGET_COMPILE_DEFINITIONS (xtool PUBLIC "-DGIT_COMMIT_HASH=\"${GIT_COMMIT_HASH}\"" "-DGIT_BRANCH=\"${GIT_BRANCH}\"" "-DGITHUB_COMMIT_HASH=\"$ENV{GITHUB_SHA}\"" "-DGITHUB_BRANCH=\"$ENV{GITHUB_REF_NAME}\"")
 
 TARGET_LINK_LIBRARIES(xtool ${WIN_DBG})
