--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,24 +88,28 @@ IF(WIN32)
 ENDIF(WIN32)
 
 # Get the current working branch
-execute_process(
-    COMMAND git rev-parse --abbrev-ref HEAD
-    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-    OUTPUT_VARIABLE GIT_BRANCH
-	COMMAND_ECHO STDOUT
-	ECHO_OUTPUT_VARIABLE
-	ECHO_ERROR_VARIABLE
-    OUTPUT_STRIP_TRAILING_WHITESPACE)
+IF(NOT($ENV{GITHUB_REF_NAME}))
+	execute_process(
+		COMMAND git rev-parse --abbrev-ref HEAD
+		WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+		OUTPUT_VARIABLE GIT_BRANCH
+		COMMAND_ECHO STDOUT
+		ECHO_OUTPUT_VARIABLE
+		ECHO_ERROR_VARIABLE
+		OUTPUT_STRIP_TRAILING_WHITESPACE)
+ENDIF()
 
 # Get the latest commit hash
-execute_process(
-    COMMAND git rev-parse HEAD
-    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-    OUTPUT_VARIABLE GIT_COMMIT_HASH
-	COMMAND_ECHO STDOUT
-	ECHO_OUTPUT_VARIABLE
-	ECHO_ERROR_VARIABLE
-    OUTPUT_STRIP_TRAILING_WHITESPACE)
+IF(NOT($ENV{GITHUB_SHA}))
+	execute_process(
+		COMMAND git rev-parse HEAD
+		WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+		OUTPUT_VARIABLE GIT_COMMIT_HASH
+		COMMAND_ECHO STDOUT
+		ECHO_OUTPUT_VARIABLE
+		ECHO_ERROR_VARIABLE
+		OUTPUT_STRIP_TRAILING_WHITESPACE)
+ENDIF()
 
 # subdirs
 ADD_SUBDIRECTORY("src")
