Support android in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,6 +116,9 @@ ADD_SUBDIRECTORY("src")
 ADD_SUBDIRECTORY("lib/xgraph")
 ADD_SUBDIRECTORY("lib/xsound")
 ADD_SUBDIRECTORY("lib/xtool")
-ADD_SUBDIRECTORY("lib/utils")
-ADD_SUBDIRECTORY("server")
-ADD_SUBDIRECTORY("surmap")
+
+if(NOT ANDROID)
+	ADD_SUBDIRECTORY("lib/utils")
+	ADD_SUBDIRECTORY("server")
+	ADD_SUBDIRECTORY("surmap")
+endif()
