--- a/lib/xgraph/CMakeLists.txt
+++ b/lib/xgraph/CMakeLists.txt
@@ -9,8 +9,10 @@ SET(xgraph_SRCS
 	xside.cpp
 )
 
-ADD_LIBRARY(xgraph STATIC ${xgraph_SRCS})
+if (ANDROID)
+	ADD_LIBRARY(xgraph OBJECT ${xgraph_SRCS})
+else()
+	ADD_LIBRARY(xgraph STATIC ${xgraph_SRCS})
+	TARGET_LINK_LIBRARIES(xgraph ${SDL2_LIBRARY})
+endif()
 
-TARGET_LINK_LIBRARIES(xgraph
-	${SDL2_LIBRARY}
-)
