Move lang.cpp/lang.h to xtool to avoid linking problems

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -6,7 +6,7 @@ INCLUDE_DIRECTORIES(AFTER
 SET(server_SRCS
 	kdsplus.cpp
 	${PROJECT_SOURCE_DIR}/src/xsocket.cpp
-	${PROJECT_SOURCE_DIR}/src/lang.cpp
+	${PROJECT_SOURCE_DIR}/lib/xtool/lang.cpp
 	${PROJECT_SOURCE_DIR}/lib/xgraph/xgraph_dummy.cpp
 	server.cpp
 #win32f.cpp -- candidat to remove
