--- a/scripting/package.json
+++ b/scripting/package.json
@@ -10,6 +10,7 @@
         "@typescript-eslint/parser": "^5.27.0",
         "eslint": "^8.16.0",
         "eslint-config-google": "^0.14.0",
+        "typedoc": "^0.22.17",
         "typescript": "^4.7.2"
     }
 }
