--- a/.github/workflows/vangers_windows_64_build.yml
+++ b/.github/workflows/vangers_windows_64_build.yml
@@ -34,7 +34,7 @@ jobs:
         msys2 -c 'ninja install'
       working-directory: clunk/build
     - name: ffmpeg -- download
-      run: git clone --depth 1 --branch n4.2.2 https://git.ffmpeg.org/ffmpeg.git ffmpeg
+      run: git clone --depth 1 --branch release/6.0 https://git.ffmpeg.org/ffmpeg.git ffmpeg
     - name: ffmpeg -- configure
       run: msys2 -c './configure --enable-shared --prefix=/mingw64
         --disable-everything
@@ -77,9 +77,9 @@ jobs:
         msys2 -c 'mkdir -p vangers/bin'
         msys2 -c 'cp /mingw64/bin/SDL2.dll vangers/bin/'
         msys2 -c 'cp /mingw64/bin/SDL2_net.dll vangers/bin/'
-        msys2 -c 'cp /mingw64/bin/avcodec-58.dll vangers/bin/'
-        msys2 -c 'cp /mingw64/bin/avformat-58.dll vangers/bin/'
-        msys2 -c 'cp /mingw64/bin/avutil-56.dll vangers/bin/'
+        msys2 -c 'cp /mingw64/bin/avcodec-60.dll vangers/bin/'
+        msys2 -c 'cp /mingw64/bin/avformat-60.dll vangers/bin/'
+        msys2 -c 'cp /mingw64/bin/avutil-58.dll vangers/bin/'
         msys2 -c 'cp /mingw64/bin/libogg-0.dll vangers/bin/'
         msys2 -c 'cp /mingw64/bin/libvorbis-0.dll vangers/bin/'
         msys2 -c 'cp /mingw64/bin/libvorbisfile-3.dll vangers/bin/'
