--- a/.github/workflows/vangers_macos_build.yml
+++ b/.github/workflows/vangers_macos_build.yml
@@ -1,6 +1,8 @@
 name: Vangers MacOS Build
 
 on: [push, pull_request]
+env:
+  MACOSX_DEPLOYMENT_TARGET: 11
 
 jobs:
   build:
@@ -16,11 +18,12 @@ jobs:
         brew install ninja yasm dylibbundler
     - name: install our libs
       run: |
-        brew reinstall -s ./formulas/libsndfile.rb
-        brew reinstall -s ./formulas/libogg.rb
-        brew reinstall -s ./formulas/libvorbis.rb
-        brew install -s ./formulas/sdl2.rb
-        brew install -s ./formulas/sdl2_net.rb
+          # brew reinstall -s ./formulas/libsndfile.rb --force --verbose --debug
+          # brew reinstall -s ./formulas/libogg.rb --force --verbose --debug
+          # brew reinstall -s ./formulas/libvorbis.rb --force --verbose --debug
+          # brew install -s ./formulas/sdl2.rb --force --verbose --debug
+          # brew install -s ./formulas/sdl2_net.rb --force --verbose --debug
+          brew install sdl2 sdl2_net libvorbis libogg libsndfile
     - name: clunk -- download lib
       run: git clone --depth 1 https://github.com/stalkerg/clunk.git clunk
     - name: clunk -- create build dir
@@ -36,7 +39,7 @@ jobs:
       run: ./configure --enable-shared --prefix=/usr/local
         --cc=clang
         --arch=x86_64
-        --cpu=ivybridge
+        --cpu=westmere
         --disable-everything
         --enable-swscale
         --enable-zlib
@@ -46,27 +49,20 @@ jobs:
         --enable-protocol=file
         --disable-d3d11va
         --disable-dxva2
+        --disable-avx
         --disable-doc --disable-ffplay --disable-ffprobe --disable-ffmpeg
         --disable-static --disable-bzlib --disable-libopenjpeg --disable-iconv
       working-directory: ffmpeg
-      env:
-        MACOSX_DEPLOYMENT_TARGET: 10.12
     - name: ffmpeg -- build and install
       run: |
         make -j4
         sudo make install
       working-directory: ffmpeg
-      env:
-        MACOSX_DEPLOYMENT_TARGET: 10.12
     - name: configure
       run: mkdir build && cd build && cmake -G Ninja ..
-      env:
-        MACOSX_DEPLOYMENT_TARGET: 10.12
     - name: make
       run: ninja
       working-directory: build
-      env:
-        MACOSX_DEPLOYMENT_TARGET: 10.12
     - name: vangers -- prepare release folder
       run: |
         mkdir Vangers.app/Contents/Frameworks
